BACKLOG-17186: Fix preview action, change icon for open in new tab, fix spacing in usages screen

--- a/src/javascript/editorTabs/AdvancedOptions/Usages/Usages.scss
+++ b/src/javascript/editorTabs/AdvancedOptions/Usages/Usages.scss
@@ -6,6 +6,10 @@
     padding: 0 250px;
 }
 
+.tableContainer {
+    padding: var(--spacing-big);
+}
+
 .item {
     margin-bottom: calc(var(--spacing-big) * 2);
 
